@@ -4,6 +4,8 @@ Changelog for GEMC
 8/11/16
  - getStringVectorFromString and getStringVectorFromStringWithDelimiter from mlibrary
  - replaceCharInStringWithChars from mlibrary
+ - getting timewindow and start time from primary generator
+ - rf signal added in event action
 
 8/10/16
  - mlibrary gstring introduced: string manipulation library. This will replace many methods that do not belong in gemc
